--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.lifecycle_version = '1.1.1'
+    ext.retrofit_version = '2.4.0'
+
     repositories {
         google()
         jcenter()
