--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
 
     // Data binding
     kapt "com.android.databinding:compiler:3.1.3"
+
+    // Support Design
+    implementation "com.android.support:design:$android_support_version"
 }
